force-app/main/default/objects/Board_Games__c/Board_Games__c.object-meta.xml
<CustomObject>
    <description>This Object holds information about Individual Board Games.</description>
    <label>Board Game</label>
    <nameField>
        <label>Board Game</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>