force-app/main/default/objects/Board_Games__c/fields/Avg_Weight__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weight__c</fullName>
    <label>Avg. Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>