force-app/main/default/objects/Board_Games__c/fields/BGG_ID__c.field-meta.xml
<CustomField>
    <fullName>BGG_ID__c</fullName>
    <label>BGG ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>