force-app/main/default/objects/Board_Games__c/fields/BGG_Link__c.field-meta.xml
<CustomField>
    <fullName>BGG_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://boardgamegeek.com/boardgame/&apos;+BGG_ID__c , BGG_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGG Link</label>
    <type>Text</type>
</CustomField>