force-app/main/default/objects/Board_Games__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>