force-app/main/default/objects/Board_Games__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Board Game provided By BoardGameGeek</description>
    <inlineHelpText>Description of Board Game provided By BoardGameGeek</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>