force-app/main/default/objects/Board_Games__c/fields/Game_Image__c.field-meta.xml
<CustomField>
    <fullName>Game_Image__c</fullName>
    <formula>Image(Image_URL__c, Name, 100, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Image</label>
    <type>Text</type>
</CustomField>