force-app/main/default/objects/Board_Games__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Image URL for Board Game provided By BoardGameGeek</description>
    <inlineHelpText>Image URL for Board Game provided By BoardGameGeek</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>