force-app/main/default/objects/Board_Games__c/fields/Link_to_BGG__c.field-meta.xml
<CustomField>
    <fullName>Link_to_BGG__c</fullName>
    <formula>IF(Not(ISBLANK( BGG_ID__c )), HYPERLINK(&apos;https://boardgamegeek.com/boardgame/&apos;+BGG_ID__c , Name, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to BoardGameGeek</label>
    <type>Text</type>
</CustomField>