force-app/main/default/objects/Board_Games__c/fields/Max_Players__c.field-meta.xml
<CustomField>
    <fullName>Max_Players__c</fullName>
    <label>Max Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>