force-app/main/default/objects/Board_Games__c/fields/Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Mechanics__c</fullName>
    <label>Mechanics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>