force-app/main/default/objects/Board_Games__c/fields/Min_Age__c.field-meta.xml
<CustomField>
    <fullName>Min_Age__c</fullName>
    <description>Recommended Minimum Age of Players for Board Game provided by BoardGameGeek</description>
    <inlineHelpText>Recommended Minimum Age of Players for Board Game provided by BoardGameGeek</inlineHelpText>    
    <label>Min Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>