force-app/main/default/objects/Board_Games__c/fields/Min_Players__c.field-meta.xml
<CustomField>
    <fullName>Min_Players__c</fullName>
    <label>Min Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>