force-app/main/default/objects/Board_Games__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name Board Game provided by BoardGameGeek</description>
    <inlineHelpText>Name for Board Game provided by BoardGameGeek</inlineHelpText>    
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>