force-app/main/default/objects/Board_Games__c/fields/Playing_Time__c.field-meta.xml
<CustomField>
    <fullName>Playing_Time__c</fullName>
    <label>Playing Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>