force-app/main/default/objects/Board_Games__c/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <formula>Image( Thumbnail_URL__c,  Name, 30,30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail Image</label>
    <type>Text</type>
</CustomField>