force-app/main/default/objects/Board_Games__c/fields/Total_Attendee_Rating_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendee_Rating_Value__c</fullName>
    <description>Rollup Summary of Total Value of all Ratings for this Game by Attendees. Used to Find Average Rating</description>
    <inlineHelpText>Total Value of all Ratings for this Game by Attendees</inlineHelpText>
    <label>Total Attendee Rating Value</label>
    <summarizedField>Board_Game_Rating__c.Rating__c</summarizedField>
    <summaryForeignKey>Board_Game_Rating__c.Board_Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>