force-app/main/default/objects/Board_Games__c/fields/Total_Board_Games__c.field-meta.xml
<CustomField>
    <fullName>Total_Board_Games__c</fullName>
    <description>Rollup Summary of the Total Number of Board Games in the Library</description>
    <inlineHelpText>Rollup Summary of the Total Number of Board Games in the Library</inlineHelpText>
    <label>Total Board Games</label>
    <summaryForeignKey>BG_Library_Entry__c.Board_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>