force-app/main/default/objects/Board_Games__c/fields/Year_Published__c.field-meta.xml
<CustomField>
    <fullName>Year_Published__c</fullName>
    <label>Year Published</label>
    <length>255</length>
    <type>Text</type>
</CustomField>