force-app/main/default/objects/Board_Games__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BGG_ID__c</columns>
    <columns>Name__c</columns>
    <columns>Description__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Thumbnail_URL__c</columns>
    <columns>Min_Players__c</columns>
    <columns>Max_Players__c</columns>
    <columns>Playing_Time__c</columns>
    <columns>Min_Age__c</columns>
    <columns>Year_Published__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>