force-app/main/default/objects/Board_Games__c/listViews/Favorite_Board_Games.listView-meta.xml
<ListView>
    <fullName>Favorite_Board_Games</fullName>
    <columns>Thumbnail_Image__c</columns>
    <columns>New_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Total_Favorited__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Favorited__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Favorite Board Games</label>
</ListView>